@@ -11,6 +11,3 @@ Change output of optimr to return extra information in attributes
   It will require new code in EVERY optimizer, but might be worth it.
   Or add an optimra() function to develop this.
 
-Clean up Rcgmin -- code is messy 2018-11-19
-
-
